2009-02-10  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/dialogs.py:
	* flumotion/admin/gtk/greeter.py:
	Handle ConnectionRefusedError when trying to log in to the manager.
	Fixes #1138

2009-02-10  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/dialogs.py:
	* flumotion/admin/gtk/main.py:
	Moved the exceptionHandler to dialogs.py so it can be used from other
	parts of the project.
	* flumotion/ui/wizard.py:
	Catch all the exceptions thrown while loading the steps and show the
	exception dialog.
	Fixes #2792 (pt)
	

2009-02-05  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/plugs/rrd.py:
	Log the RRD updates with %r, not with %s. Fix format string with
	missing parameters.

2009-02-04  Julien Le Goff  <jlegoff@flumotion.com>

	* flumotion/component/misc/httpserver/cachedprovider.py:
	Flush the temporary cached file after calling the File.write method in
	order to avoid race problems (since that same file is read in a
	concurrent thread).
	Fixes #1244

2009-02-04  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/plugs/rrd.py:
	Make updating the RRD file more robust and make it work with long
	values (as opposed to just working with ints). Fixes #1230.

2009-02-04  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/common/bundleclient.py:
	Revert r7753 and add a FIXME comment to remember that we cannot be 
	completelly sure the bundle has the correct content only by checking
	that the directory exists.

2009-02-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/scenario/Makefile.am:
	* flumotion/scenario/live/live.xml:
	* flumotion/scenario/ondemand/ondemand.xml:
	* flumotion/scenario/steps/steps.xml:
	* flumotion/scenario/scenario.xml (added):
	Bundle the flumotion/scenario/__init__.py file. Otherwise the modules
	under that module were load from the local installation and not from
	the bundles.

2009-02-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>
