@@ -1,3 +1,11 @@
+2009-02-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
+	reviewed by: jlegoff
+
+	* flumotion/worker/checks/check.py:
+	Add a method to check whether a file exists. Used as a worker check.
+	Helps #2075 (pt)
+
 2009-02-10  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	* flumotion/admin/gtk/dialogs.py:
